--- a/myweb.html.html
+++ b/myweb.html.html
@@ -170,6 +170,7 @@
                 <div class="space-y-4">
                     <p class="text-xl text-cyan-300 font-semibold">Email: fulemon666@gmail.com</p>
                     <p class="text-lg text-slate-400">GitHub: <a href="https://github.com/TC-sudo-dps" target="_blank" rel="noopener noreferrer" class="text-cyan-400 hover:text-cyan-300 transition underline">https://github.com/TC-sudo-dps</a></p>
+                    <p class="text-lg text-slate-400">Instagram: <a href="https://www.instagram.com/_7xyzz/?hl=zh-tw" target="_blank" rel="noopener noreferrer" class="text-cyan-400 hover:text-cyan-300 transition underline">@_7xyzz</a></p>
                 </div>
             </div>
         </section>
